# nxp-plug-and-trust

./: CMakeLists.txt  enersys-defines.h  enersys-defines.h.in  fsl_sss_ftr.h  simw_lib.cmake  simwlib_cmake_options.cmake
configurations/: CMakeLists.txt  enersys-defines.h.in
ecc_example/: CMakeLists.txt
hostlib/hostLib/tstUtil/: axCliUtil.c  axCliUtil.h  axEccRefPem.c  axEccRefPem.h  hkdf.c  probeAxUtil.c  probeAxUtil.h  tst_hlse_a71ch_util.c  tst_hlse_a71ch_util.h  tst_sm_time.c
nxp_iot_agent/: CMakeLists.txt  version_info.txt
nxp_iot_agent/ex/: CMakeLists.txt
nxp_iot_agent/ex/src/: CMakeLists.txt  iot_agent_demo.c
nxp_iot_agent/ex/src/utils/: iot_agent_mqtt_freertos.c  iot_agent_mqtt_paho.c
nxp_iot_agent/ex/tools/edge-lock-device-link-rtp-server/: pom.xml
nxp_iot_agent/inc/: nxp_iot_agent_config.h  nxp_iot_agent_datastore_fs.h
nxp_iot_agent/platform/mbedtls/: net_lpc_mwm.c  net_lwip.c
nxp_iot_agent/platform/openssl/: network_openssl.c
nxp_iot_agent/src/: CMakeLists.txt  nxp_iot_agent.c  nxp_iot_agent_datastore_fs.c  nxp_iot_agent_session.c  nxp_iot_agent_utils.c
nxp_iot_agent/src/common/: CMakeLists.txt  nxp_iot_agent_dispatcher.c
sss/ex/inc/: ex_sss_scp03_keys.h
sss/inc/: fsl_sss_ftr.h.in
