CMAKE_MINIMUM_REQUIRED(VERSION 3.5.0)

project (ex_ecc)

ADD_EXECUTABLE(${PROJECT_NAME} ${SIMW_SE_SOURCES} ${SIMW_SE_AUTH_SOURCES} ../sss/ex/ecc/ex_sss_ecc.c)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ssl crypto)

TARGET_INCLUDE_DIRECTORIES(
    ${PROJECT_NAME}
    PUBLIC
    ../
    ${SIMW_INC_DIR}
    )
